--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
     <string name="boton_continuar">CONTINUAR</string>
+    <string name="cerrar_sesion">Cerrar sesion</string>
 </resources>
 
