--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="menu_send">Send</string>
     <string name="boton_continuar">CONTINUAR</string>
     <string name="cerrar_sesion">CERRAR SESION</string>
+    <string name="menu_mapa">MAPA</string>
 </resources>
 
