--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,8 @@
     <string name="boton_continuar">CONTINUAR</string>
     <string name="cerrar_sesion">CERRAR SESION</string>
     <string name="menu_mapa">MAPA</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
 
