--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
 
     <string name="menu_home">INICIO</string>
     <string name="menu_eventos">EVENTOS</string>
-    <string name="menu_reservar">RESERVAR</string>
+    <string name="menu_reservar">RESERVAS</string>
     <string name="menu_perfil">EDITAR PERFIL</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
